increased memory allocation for JVM in hparms updated hrdbms_start.sh reverted change in Dockerfile - based image should be pull from iitdbgroup